2000-07-31  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-backup-or-restore-buddy-list): no longer
	interactive.  now buries the *edit-buddies* buffer.  no longer
	returns buddy-blist.
	(tnt-handle-config): now calls backup-or-restore.
	(tnt-handle-nick): no longer calls backup-or-restore.

2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-restore-buddy-list): added error reporting, more
	checking.  no longer returns buddy-blist.
	(tnt-backup-buddy-list): added.
	(tnt-restore-buddy-list-if-necessary): removed.  replaced with
	below.
	(tnt-backup-or-restore-buddy-list): added.  calls either "restore"
	or "backup".

2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-switch-user): now checks if we're online, and won't
	change username if we are.

2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-backslashify-string): added.  given a string, adds
	backslashes to make a regexp that matches the original string.
	(tnt-strip-a-href): now calls backslashify, so that when a url
	comes in that has a ? in it, we still don't see it twice.

2000-07-27  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-restore-buddy-list): made interactive.

2000-07-24  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-neliminate-newlines): now replacing newlines *and*
	carriage returns with spaces.  not entirely sure whether this is
	necessary, but it can't hurt.
	(tnt-append-message): now calling toc-normalize.  there was some
	situation where a name was not getting colored properly because of
	this.
	(tnt-append-message-and-adjust-window): now calling
	tnt-reformat-text instead of tnt-strip-html.
	(tnt-pipe-message-to-program): now calling tnt-reformat-text
	instead of tnt-strip-html.
	(tnt-handle-chat-invite): now calling tnt-reformat-text instead of
	tnt-strip-html.
	(tnt-strip-some-html): added.  similar to tnt-strip-html, but